--- a/Traveling Agency Task/css/index.css
+++ b/Traveling Agency Task/css/index.css
@@ -52,6 +52,14 @@ header {
   }
 }
 
+@media (max-width: 991px) {
+    .navbar-collapse {
+        background-color: transparent;
+        padding: 20px;
+        margin-top: 10px;
+        border-radius: 10px;
+    }
+}
 .rectangle {
   width: 100%;
   height: 100%;
@@ -321,4 +329,5 @@ header {
 
 .section10 span {
   color: grey;
+
 }
